--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "It-stydio",
+  "name": "it-stydio",
   "version": "2.0.0",
   "description": "",
   "homepage": "https://Zina88.github.io/It-stydio",
@@ -28,5 +28,6 @@
     "parcel-reporter-clean-dist": "^1.0.4",
     "posthtml-include": "^1.7.4"
   },
-  "browserslist": "> 0.5%, last 2 versions, not dead"
+  "browserslist": "> 0.5%, last 2 versions, not dead",
+  "main": "index.js"
 }
